Inject repository links

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -18,19 +18,19 @@ The successfully [voted in](https://voting.decred.org/) rule change [DCP0004](ht
 
 ### dcrd
 
-Refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of the `chaincfg` module. Careful code upgrades without breaking things are now possible due to previous work on versioned modules, which are now available and in full use.
+[dcrd](https://github.com/decred/dcrd) refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of the `chaincfg` module. Careful code upgrades without breaking things are now possible due to previous work on versioned modules, which are now available and in full use.
 
 ### dcrwallet
 
-Code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows users to omit the private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
+[dcrwallet](https://github.com/decred/dcrwallet) received code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows users to omit the private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
 
 ### Decrediton
 
-Work on making Decrediton's design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened; this initial version will allow Decrediton users to perform actions like open/close channel, add/withdraw funds, create invoices and send payments.
+Work on making [Decrediton](https://github.com/decred/decrediton)'s design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened; this initial version will allow Decrediton users to perform actions like open/close channel, add/withdraw funds, create invoices and send payments.
 
 ### Politeia
 
-An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
+[Politeia](https://github.com/decred/politeia) upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
 
 ### dcrlnd
 
@@ -42,19 +42,19 @@ Work is underway to prepare LN for mainnet, and Lightning will be technically po
 
 ### dcrandroid
 
-Minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase.
+[dcrandroid](https://github.com/decred/dcrandroid) received minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase.
 
 ### dcrios
 
-dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
+[dcrios](https://github.com/raedahgroup/dcrios) beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
 
 ### dcrdata
 
-v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added on the alpha site and are being iterated upon.
+[dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added on the alpha site and are being iterated upon.
 
 ### docs
 
-New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
+New [docs](https://github.com/decred/dcrdocs) pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
 
 ### dcrtimestamptweet
 
