--- a/journal/201905.md
+++ b/journal/201905.md
@@ -191,6 +191,12 @@ EOS burned its accumulated "Treasury" inflation, after an earlier attempt had fa
 
 <https://cryptoslate.com/eos-likely-to-drop-inflation-rate-from-5-to-1/>
 
+Dash ventures
+
+https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee
+
+
+
 {DEX}
 
 {related exchanges and websites}
