--- a/journal/201905.md
+++ b/journal/201905.md
@@ -89,6 +89,8 @@ Exchange integrations:
 {payment processors}
 
 {wallets}
+https://twitter.com/bitbillwallet/status/1126659323893968896?s=21 (not tested)
+https://twitter.com/adhoc_zone/status/1126653081259839488?s=21 (not tested. new? hardware wallet? not clear from webpage)
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
