--- a/journal/201905.md
+++ b/journal/201905.md
@@ -200,7 +200,9 @@ Dash ventures
 
 https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee
 
+Open Money Initiative
 
+https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-61422b58ad06
 
 {DEX}
 
