--- a/journal/201905.md
+++ b/journal/201905.md
@@ -144,6 +144,7 @@ Selected articles:
 
 * https://medium.com/@seth.benton/how-i-make-a-living-in-the-crypto-gig-economy-8674f3693858
 * {title} by {author} ([{domain}]({link}) - {optional comment}
+* https://medium.com/@NoahPierau/the-basics-of-blockchain-governance-6669c098344d
 
 Translations:
 
@@ -224,6 +225,11 @@ https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-614
 Another [delisting](https://archive.today/sZBC7) spree by Poloniex yet again slashed the prices of several assets. Among them was Peercoin, the pioneer of Proof of Stake. The logic of Poloniex is a bit unclear because Peercoin [doesn't look like](https://twitter.com/peercoinppc) dead while CLAM's [master](https://github.com/nochowderforyou/clams/commits/master) was last updated in Jan 2017 but it keeps surviving the delisting runs and is even available [on margin trading](https://poloniex.com/marginTrading).
 
 Poloniex [announced](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) staking for Cosmos's ATOMs while maintaining the ability to trade.
+
+Poloniex [announced](https://twitter.com/Poloniex/status/1129100271353827328) that DCR will no longer be available to US-based customers. 
+https://twitter.com/Poloniex/status/1129169913694892032
+
+https://www.cnbc.com/2019/05/10/sec-approves-new-silicon-valley-stock-exchange-backed-by-marc-andreessen-other-tech-heavyweights.html
 
 Binance security breach:
 
