--- a/journal/201905.md
+++ b/journal/201905.md
@@ -149,6 +149,7 @@ Selected articles:
 Translations:
 
 * {}
+* March Journal translated to Arabic by arij and reviewed by abdulrahman4 https://insaf01.github.io/decred-journal-ar/journal/201903.html>
 
 Videos:
 
