--- a/journal/201905.md
+++ b/journal/201905.md
@@ -247,6 +247,7 @@ Poloniex [announced](https://twitter.com/Poloniex/status/1129100271353827328) th
 * discussion https://www.reddit.com/r/decred/comments/bpgv33/why_is_poloniex_delisting_decred/
 * While DCR has many [arguments](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) against being a security, "regulatory concerns" do not prevent Poloniex from trading assets that are significantly centralized or did huge ICOs. In fact, they have [assisted](https://blog.circle.com/2019/03/14/poloniex-welcomes-cosmos-enables-preview-and-redemption-of-ico-atoms/) one ICO in March.
 * In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.".
+* https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/
 
 https://www.cnbc.com/2019/05/10/sec-approves-new-silicon-valley-stock-exchange-backed-by-marc-andreessen-other-tech-heavyweights.html
 
@@ -259,6 +260,8 @@ Binance security breach:
 * reorg approach was eventually decided against to avoid damaging Bitcoin's credibility and avoid the risk of network or community split https://twitter.com/cz_binance/status/1125996194734399488
 * Binance absorbed the damage with their emergency fund
 * fun fact: Decred never had a reorg of more than 1 block https://twitter.com/lukebp_/status/1126128241054556160
+
+Another [sad story](https://medium.com/coinmonks/the-most-expensive-lesson-of-my-life-details-of-sim-port-hack-35de11517124) surfaced of a person's poor security practices leading to a loss of >$100K in crypto. Hint: SMS 2FA is insecure and of course, don't keep that much on an exchange.
 
 {other: regulations, security, fun}
 
