--- a/journal/201905.md
+++ b/journal/201905.md
@@ -117,8 +117,11 @@ New merchants:
 {investment adoption}
 
 ## Outreach
+Decred was intensely busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. An Africa Telegram group (Decred Africa) was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24th. In NYC, various community members attended the Magical Crypto Conference May 10-11, then Consensus the following three days. At Consensus, Jake presented a 30 minute update on Decred's funding and roadmap at their Changelogs track. Additionally, Jake spoke later that day at Ditto PR & The Block's first ever conference, AtomicSwap. Jake was on a panel with Beam, DASH and Orbs, and debated decentralization and governance with the other representatives. Decred coordinated a dinner with members of its Asian community and determined a strategy to penetrate the Asian market, prioritizing China in the immediate term. Dominic and Hugo are planning an event in partnership with Blockbeats, a major crypto media player, to promote and host a meetup in Beijing in the near future.
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+Anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with JZ, Murad Madhudov, Joel Monegro, Luke Powell, Jamie Holdstock, and Permabull Nino. The first podcast with JZ will release June 1st, with others to follow.
+
+Dustin released the first part of the Decred Assembly, a segment titled 'Decred Distributed' that looks at markets across the world and talks with local community organizers to understand what Decred is doing in those areas. The first edition featured Elian Huesca, who is leading efforts in Mexico and doing a lot of great work in Latin America. https://www.youtube.com/watch?v=N7GYD8zwOe8 In early June, multiple additional segments will be released, including an in-depth discussion with jy-p about the DEX proposal.
 
 Ditto AMA https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/
 
