--- a/journal/201905.md
+++ b/journal/201905.md
@@ -16,6 +16,13 @@
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
+LND: {}
+
+Work continues to ready LND for mainnet, with bug fixes, improvements to integration tests to make them more stable and [run faster](https://github.com/decred/dcrlnd/pull/32) on simnet, increased test coverage, and removal of unused code and references to BTC/LTC. Work has begun to [port](https://github.com/decred/dcrlnd/issues/12) Docker-related dcrlnd files to dcrlnd to enable easier tinkering and development by the community, and a [quickstart guide](https://github.com/decred/dcrlnd/pull/8) has been started for knowledgeable individuals that want to
+get going faster. Work has also begun to start porting upstream changes made to [lnd](https://github.com/lightningnetwork/lnd) since dcrlnd branched off to begin the initial port. 
+
+dcrlnd has been added to the [Bug Bounty Program](https://bounty.decred.org/) on an experimental basis, with [caveats](https://github.com/decred/dcrlnd#security).
+
 [Politeia](https://github.com/decred/politeia): {}
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
