Add woocommerce plugin
Added potential payment integration

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -109,6 +109,7 @@ Exchange integrations:
 {OTC desks}
 
 {payment processors}
+https://www.reddit.com/r/decred/comments/buhl35/decred_woocommerce_payment_gateway_open_source/ (not tested (that i know of), but the website looks legit)
 
 {wallets}
 https://twitter.com/bitbillwallet/status/1126659323893968896?s=21 (not tested)
