Adding dcrd, dcrwallet, Decrediton commits
Took a pass at adding activity from the GitHub PRs for the above repos. Tried to filter ones that seemed important and create summary text for a couple obviously important commits.

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -12,9 +12,64 @@
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+Merged:
+* wire: Add tests for MsgCFHeaders.https://github.com/decred/dcrd/pull/1732 (simple test added..?)
+* rpctest: Allow custom miner on voting wallet: https://github.com/decred/dcrd/pull/1751 (significant to end user or just speeding up simnet for devs?)
+* TravisCI: Disable race detector.: https://github.com/decred/dcrd/pull/1749 (optional feature to speed up testing)
+* peer: Prevent last block height going backwards.https://github.com/decred/dcrd/pull/1747 (can't parse. bug fix?)
+* wire: Add tests for MsgCFHeaders.: https://github.com/decred/dcrd/pull/1732
+
+Open:
+* blockchain: update CalcBlockSubsidy.: https://github.com/decred/dcrd/pull/1750 (performance optimization?)
+* May saw a major optimization for PoW miners, with an [overhaul](https://github.com/decred/dcrd/pull/1748) of the background template generator (the function that miners call to receive templates to create blocks from). Currently, new miners not familiar with the intricacies of Decred voting will occasionally produce valid blocks with the minimum 3 votes from PoS voters (out of a possible 5). This is bad for PoW miners, who get a reduced subsidy for including fewer votes. This is also undesirable for PoS stakers, who may not receive the PoS reward, despite having voted, simply due to propagation delay. To address this, the background template generator has been updated to add support for intelligent vote propagation, as well as a number of other features, such as better handling of chain reorganization to alternative blocks, a subscription that provides miners a stream of template updates, and consideration of the synchronization state as part of determining if the chain is current. It should be noted that this work only implements the infrastructure and does not yet expose this functionality in production.  (this is potentially the biggest update, so have taken a stab at rewording davecgh's long commit message)
+* mining: require a valid template address: https://github.com/decred/dcrd/pull/1739 (minor update, not sure if relevant)
+* mining: require a valid template address: https://github.com/decred/dcrd/pull/1736 (looks related to larger change above)
+* rpcserver: refactor listener logic to server. https://github.com/decred/dcrd/pull/1734 (port from btcd, might be notable)
+* blockmanager: remove serverPeer from blockmanager completely.https://github.com/decred/dcrd/pull/1735 (port from btcd, might be notable)
+* rpcserver: don't use activeNetParams. https://github.com/decred/dcrd/pull/1733 (port from btcd, might be notable)
+* connmgr: Add DialContext API https://github.com/decred/dcrd/pull/1729 (not sure if important)
+
+
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
+Merged:
+* Add context to RPC method handlers: https://github.com/decred/dcrwallet/pull/1457 (important?)
+* Return early with context error from spv rescan. https://github.com/decred/dcrwallet/pull/1456 (bug fix) 
+* Require ticket price limit configs to be non-zero to apply: https://github.com/decred/dcrwallet/pull/1454 (bug fix)
+* Add errors.Cause to find inital cause of error: https://github.com/decred/dcrwallet/pull/1453 (meta bug fixing? i.e. bug feature?)
+* Lock selected previous outputs for concurrent UTXO selection: https://github.com/decred/dcrwallet/pull/1452 (possibly important??)
+* Replace wallet locking management goroutine with mutexes: https://github.com/decred/dcrwallet/pull/1451 (possibly a relevant feature we should describe in high-level terms that make sense to user)
+* Bump to wallet/v1.2.3: https://github.com/decred/dcrwallet/pull/1449 (just looks like changing the version numbers, but do we have an actual minor version bump to announce?)
+* Fix cursor indexes to derive next address: https://github.com/decred/dcrwallet/pull/1447 (bug fix)
+
+Open:
+* multi: allow wallet unlocks via a passphrase token: https://github.com/decred/dcrwallet/pull/1437 (opened Apr 24th, not sure if we covered already? remember similar feature added last mo)
+* wip: add CleanOutAccount: https://github.com/decred/dcrwallet/pull/1419 (seems like interesting new feature, WIP tho, not sure exactly the significance to the user)
+
+
+
 [Decrediton](https://github.com/decred/decrediton): {}
+
+Merged:
+* Transaction/History page now responsive: https://github.com/decred/decrediton/pull/2124
+* Updates grpc and electron to supported versions. https://github.com/decred/decrediton/pull/2108
+* Ongoing work on making screens responsive (master issue):https://github.com/decred/decrediton/issues/1946
+
+Open:
+* This PR fixes a bug I noticed when switching network at the settings page after commit: https://github.com/decred/decrediton/pull/2128
+* Adds price ticker (looks like a chart): https://github.com/decred/decrediton/issues/1252
+* Initial LN integration: https://github.com/decred/decrediton/pull/2107
+```
+This is the first version of an embedded LN wallet UI on decrediton.
+
+Current features:
+
+Connect to initialized and unlocked ln wallets
+Fund/Withdraw funds from onchain ln wallet
+Open/Close channels
+Create invoices
+Send payments
+```
 
 LND: {}
 
@@ -38,6 +93,7 @@ dcrlnd has been added to the [Bug Bounty Program](https://bounty.decred.org/) on
 [docs](https://github.com/decred/dcrdocs):
 
 * new [Security](https://docs.decred.org/advanced/general-security/) page
+* Updated [Transaction Details](https://docs.decred.org/advanced/transaction-details/) page adds more documentation for Decred-specific transaction types and a detailed [example transaction](https://github.com/decred/dcrdocs/pull/937). 
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
