--- a/journal/201905.md
+++ b/journal/201905.md
@@ -194,6 +194,23 @@ Dustin released the first part of the Decred Assembly, a segment titled 'Decred 
 
 Ditto AMA https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/
 
+Ditto's May achievements:
+
+- Ditto and The Block hosted Atomic Swap, an invite-only event during Blockchain Week NYC attended by 150 crypto influencers, media, investors, and enthusiasts, and sponsored by Decred. The Block published a story prior to the event <https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/>
+- @jy-p spoke on “The Idealist’s Dilemma” panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
+- Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Mag, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @dustorf.
+- @liz_bagot and @treydpr from Ditto answered the community’s questions on reddit AMA <https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/> and livestreamed video on YouTube <https://www.youtube.com/watch?v=i8XjAOMX-VM>
+- @jy-p and @muststopmurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
+- @jy-p quoted about Facebook getting into crypto in: Crowdfund Insider [https://www.crowdfundinsider.com](https://www.crowdfundinsider.com/), Live Bitcoin News <https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/>, and The Daily Hodl <https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/>
+- @moo31337 spoke with host Matthew Aaron on the Crypto101 podcast. Starts at 17:32 <https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101>
+- @MustStopMurad appeared on Cheddar TV, where he mentions Decred at 2:07. <https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year>
+- Mention of Decred in BTCManager from after Blockchain week meeting. <https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/>
+- The Information quoted @jy-p in a story about the launch of Spedn: <https://www.theinformation.com/articles/can-crypto-crack-the-retail-market>
+- @MustStopMurad was quoted in Forbes and mentions Decred: “While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.” <https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/#25e10e9e5110>
+- Secured a speaking slot for @jy-p about decentralization and Decred’s funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
+- Worked with the community to finalize a byline on Decred’s approach to staking.
+- Submitted PR proposal in Politeia for next six months.
+
 ## Events
 
 Attended:
@@ -286,6 +303,8 @@ Another leg of the BTC pump pushed DCR/BTC below 400k sat with a quick recovery.
 
 {governance, funding, chain forks, community forks, controversy}
 
+BCH reorg https://twitter.com/AaronvanW/status/1131991942923993090
+
 Intel Speculative execution multiple vulnerabilities
 <https://www.extremetech.com/computing/291474-intel-discloses-new-speculative-execution-security-vulnerabilities>
 
@@ -294,6 +313,20 @@ EOS burned its accumulated "Treasury" inflation, after an earlier attempt had fa
 <https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/>
 
 <https://cryptoslate.com/eos-likely-to-drop-inflation-rate-from-5-to-1/>
+
+Tezos Athens activates, mention 100 XTZ dev reward from inflation
+
+
+
+Zcash treasury funding supported by @zooko
+
+https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173
+
+
+
+
+
+
 
 Dash ventures
 
@@ -337,6 +370,8 @@ Binance security breach:
 * fun fact: Decred never had a reorg of more than 1 block https://twitter.com/lukebp_/status/1126128241054556160
 
 Another [sad story](https://medium.com/coinmonks/the-most-expensive-lesson-of-my-life-details-of-sim-port-hack-35de11517124) surfaced of a person's poor security practices leading to a loss of >$100K in crypto. Hint: SMS 2FA is insecure and of course, don't keep that much on an exchange.
+
+
 
 {other: regulations, security, fun}
 
