Rel ext, community stats, governance stats

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -123,7 +123,32 @@ Congratulations to {n} contributors listed on [decred.org](https://decred.org/co
 
 ## Governance
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using May's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. As these payments were for work completed in April, it is also informative to consider them in the context of the April average daily rate of ${n.nn} - in which case the USD received/spent figures are ${n}K/${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,616 DCR and spent 8,456 DCR. Using May's daily average DCR/USD rate of $27.71, this is $433K received and $234K spent. As these payments were for work completed in April, it is also informative to consider them in the context of the April average daily rate of $24.22 - in which case the USD received/spent figures are $378K/$205K. As of 1 Jun, Treasury balance is 613,840 DCR (17.3 million USD at $28.19).
+
+Below is the proposal status as of Jun 1:
+
+{WIP}
+
+6 new proposals were submitted:
+
+[Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) by @davecgh
+[Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) by @lizbagot
+[Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) by @richard-red
+[Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) by @jy-p
+
+[Incentivizing BD Evangelists within the Decred Ecosystem](https://proposals.decred.org/proposals/cb446a469987d6603d93f442ef0d4e45bacbea47a72b5ce89f9c3cac3868d627) by @betterfuture
+
+[A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979
+8,787 Yes votes, 9,284 No votes (48.6% Yes) - voter participation of 43.9%, support from 21% of tickets.
+
+
+
+Voting concluded for 3 proposals:
+
+[Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) - voting finished May 13 - 43 comments ()
+8,958 Yes votes, 231 No votes (97.5% Yes) - voter participation of 22.5%, support from 22% of tickets.
+
+
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
@@ -267,17 +292,19 @@ https://podcasts.apple.com/us/podcast/decred-everything-you-ever-wanted-to-know-
 
 Community stats:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
+* Politeia users: 175 (+8)
+* Twitter followers: 40,462 (+6)
+* Reddit subscribers: 9,459 (+34)
+* Matrix users: 337 (+25)
+* Slack users: 6,721 (+36)
 * Discord users: {}, verified to post: {}
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
-* Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: Decred page {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* Telegram users: 3,576 (-92)
+* YouTube subscribers: 3,769 (-2)
+* Facebook followers: 3,219 (+1), likes: 2,954 (-2)
+* LinkedIn followers: Decred page 544(+29)
+* GitHub dcrd stars: 489 (+3), forks: 1,324 (+39)
+
+Snapshot taken June 1
 
 Comm systems news:
 
@@ -299,63 +326,34 @@ Another leg of the BTC pump pushed DCR/BTC below 400k sat with a quick recovery.
 
 ## Relevant External
 
+
+
+
+
 {PoW, ASIC resistance, cc network security and other cc tech}
 
 {governance, funding, chain forks, community forks, controversy}
 
-BCH reorg https://twitter.com/AaronvanW/status/1131991942923993090
-
 Intel Speculative execution multiple vulnerabilities
 <https://www.extremetech.com/computing/291474-intel-discloses-new-speculative-execution-security-vulnerabilities>
 
-EOS burned its accumulated "Treasury" inflation, after an earlier attempt had failed to execute.
+EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/) 34 million EOS (~$272 million) from the eosio.saving account. These funds had accumulated from the 4% inflation which was to be used to fund project development through a [Worker Proposal System](https://medium.com/eosys/eos-worker-proposal-system-announcement-6addcfb0134c). This idea fell out of favor with the EOS BPs and community, and 15 BPs supported the proposal to burn accumulated savings [on](https://www.eosx.io/tx/26ca16319febafc0942a8c6e3be26c16b84846b7cfe5f6ade906a0b86a6c2bb7?listView=actions) May 8. New tokens are still accumulating in the savings account, but this seems likely to be removed as there is an open [referendum](https://eosauthority.com/polls_details?proposal=inflation_20190307&prev=search) to remove the 4% inflation for development entirely, which has almost unanimous support from around 2.7% of EOS tokens that have voted.
 
-<https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/>
+Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end some time in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the current setup of relying on the Electronic Coin Company.
 
-<https://cryptoslate.com/eos-likely-to-drop-inflation-rate-from-5-to-1/>
+Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work.
 
-Tezos Athens activates, mention 100 XTZ dev reward from inflation
+Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee) investment foundation is nearing completion, and Dash will be holding an election to select a set of supervisors to oversee its operation. The Dash Investment Foundation will be able to take ownership of equity or other assets in consideration for network funding. The election to fill the remaining 4 of 6 supervisor seats [started](https://blog.dash.org/details-on-the-election-for-dash-investment-foundation-supervisors-25766c55a1f) on May 30, and will be followed by budgetary proposals to fund the foundation's administrative costs and allocate some capital for it to invest,
 
+The [Open Money Initiative](https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-61422b58ad06) was announced, a research nonprofit which will study how money is used in closed economies with collapsing monetary systems. The initiative's first project is an ethnographic study in Venezuela. The initiative is supported by funding from Zcash, Stellar, Tezos and the Cosmos supported Interchain Foundation - among others.
 
+A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.com/the-bitcoin-cash-hardfork-three-interrelated-incidents/) issues and in the ensuing chaos 3,391 BCH (~$1.35 million) were double spent. A bug with Bitcoin ABC led to invalid transactions filling up the mempool and a series of empty blocks being mined. Some miners began mining blocks on the pre-hardfork chain, causing a chain split. Immediately after the bug was resolved, a 2 block reorg occurred in which funds that the hardfork made spendable by any miners were double spent. It seems likely the dominant BCH miners reorged the chain to remove transactions in which these coins were claimed by another miner.
 
-Zcash treasury funding supported by @zooko
-
-https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173
-
-
-
-
-
-
-
-Dash ventures
-
-https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee
-
-Open Money Initiative
-
-https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-61422b58ad06
-
-BCH reorg https://twitter.com/AaronvanW/status/1131991942923993090
+Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and   [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security and concurrent support for ICO projects that seem more likely to be deemed securities. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
 
 {DEX}
 
 {related exchanges and websites}
-
-Another [delisting](https://archive.today/sZBC7) spree by Poloniex yet again slashed the prices of several assets. Among them was Peercoin, the pioneer of Proof of Stake. The logic of Poloniex is a bit unclear because Peercoin [doesn't look like](https://twitter.com/peercoinppc) dead while CLAM's [master](https://github.com/nochowderforyou/clams/commits/master) was last updated in Jan 2017 but it keeps surviving the delisting runs and is even available [on margin trading](https://poloniex.com/marginTrading).
-
-Poloniex [announced](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) staking for Cosmos's ATOMs while maintaining the ability to trade.
-
-Poloniex [announced](https://twitter.com/Poloniex/status/1129100271353827328) that DCR will no longer be available to US-based customers.
-
-* https://twitter.com/Poloniex/status/1129169913694892032
-* https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9
-* snapshot of text on exchange site https://archive.today/T29Jx
-* "geofencing" https://poloniex.freshdesk.com/support/solutions/articles/1000275221-asset-geofencing-faq
-* discussion https://www.reddit.com/r/decred/comments/bpgv33/why_is_poloniex_delisting_decred/
-* While DCR has many [arguments](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) against being a security, "regulatory concerns" do not prevent Poloniex from trading assets that are significantly centralized or did huge ICOs. In fact, they have [assisted](https://blog.circle.com/2019/03/14/poloniex-welcomes-cosmos-enables-preview-and-redemption-of-ico-atoms/) one ICO in March.
-* In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.".
-* Circle further elaborated on their interpretation of the new framework: https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/
 
 https://www.cnbc.com/2019/05/10/sec-approves-new-silicon-valley-stock-exchange-backed-by-marc-andreessen-other-tech-heavyweights.html
 
@@ -367,7 +365,8 @@ Binance security breach:
 * reorgs covered here https://research.circle.com/weekly-recaps/weekly-crypto-recap-to-reorg-or-not-to-reorg
 * reorg approach was eventually decided against to avoid damaging Bitcoin's credibility and avoid the risk of network or community split https://twitter.com/cz_binance/status/1125996194734399488
 * Binance absorbed the damage with their emergency fund
-* fun fact: Decred never had a reorg of more than 1 block https://twitter.com/lukebp_/status/1126128241054556160
+
+  
 
 Another [sad story](https://medium.com/coinmonks/the-most-expensive-lesson-of-my-life-details-of-sim-port-hack-35de11517124) surfaced of a person's poor security practices leading to a loss of >$100K in crypto. Hint: SMS 2FA is insecure and of course, don't keep that much on an exchange.
 
