add discord stats

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -297,7 +297,7 @@ Community stats:
 * Reddit subscribers: 9,459 (+34)
 * Matrix users: 337 (+25)
 * Slack users: 6,721 (+36)
-* Discord users: {}, verified to post: {}
+* Discord users: Total users: 2257 (+63), Verified to Post: 226 (+27)
 * Telegram users: 3,576 (-92)
 * YouTube subscribers: 3,769 (-2)
 * Facebook followers: 3,219 (+1), likes: 2,954 (-2)
