--- a/journal/201905.md
+++ b/journal/201905.md
@@ -156,25 +156,17 @@ Voting concluded for 3 proposals:
 
 ## Network
 
-{cross-check dcrdata.org, dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
+Hashrate: May's hashrate opened at ~524 Ph/s and closed ~574 Ph/s, bottoming at 364 Ph/s and peaking at 626 Ph/s throughout the month. Pool hashrate distribution as of June 1:  Poolin 20%, lab.antpool.com 18%, BTC.com 8.7%, F2Pool 7.7%, UUPool 7.7%, Luxor 2%, BeePool 0.86%, CoinMine 0.28%, suprnova 0.02% and others 35.4% per[dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: May's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Staking: 30-day average ticket price was 116 DCR (-{1.2}) per dcrstats.com. The price varied between 109.7-124.65 DCR. Locked amount was 4.68-4.82 million DCR, which corresponded to 47.5-48.8% of the available supply.
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+{Should we mention no more node stats for the foreseeable future?}
 
-{recap of ticket price action if it was interesting}
-
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {vx.y.z: n% (+n%), ...}.
-
-{any interesting analysis or events in the network}
-
-DCP4 tx detected https://twitter.com/RichardRed0x/status/1127280791002787843
+Soon after the activation of the new consensus rules there was a [transaction](https://twitter.com/RichardRed0x/status/1127280791002787843) that made use of the new rules, the nodes that did not recognize this got forked off. We had stedy stream of people dropping by on the support channels throughout the month as many of their wallets stopped syncing. There was no major network level outage observed. 
 
 ## Mining
 
-{new miners, relevant news about existing miners, interesting events or stats}
-
-https://www.reddit.com/r/decred/comments/br7h88/hi_all_viabtc_has_supported_dcr_mining_from_may/
+A very prominent mining pool ViaBTC [announced](https://pool.viabtc.com/announcements/85) that they now support Decred mining.
 
 ## Integrations
 
