--- a/journal/201905.md
+++ b/journal/201905.md
@@ -312,11 +312,9 @@ Twitter: {interesting threads}
 
 ## Markets
 
-In May DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${n.nn}.
+In May DCR was trading between USD 23.6-35 / BTC 0.0032-0.0045. The average daily rate was $27.71.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
-
-Another leg of the BTC pump pushed DCR/BTC below 400k sat with a quick recovery.
+Bitcoin rose steadily from ~5500 and even crossed 9000 USD for a brief amount of time. Right now it seems to be consolidating to break the 9000 USD barrier. It is very interesting to note that “9000” has a very significant “meme” value due to the [“Its over 9000”](https://beincrypto.com/bitcoin-9000-vegeta-memes-coming/) meme.
 
 ## Relevant External
 
